<resources>
    <string name="lepay_actionbar_title">收银台</string>
    <string name="lepay_cashier_title_tradeinfo">订单信息</string>
    <string name="lepay_cashier_title_paytype">支付方式</string>
    <string name="lepay_cashier_tradeinfo_price_title">支付金额：</string>
    <string name="lepay_cashier_tradeinfo_name_title">商品名称：</string>
    <string name="lepay_cashier_cardno">银行卡号</string>
    <string name="lepay_cashier_mobile">银行预留手机号</string>
    <string name="lepay_cashier_validity">有效期 月份年份 如0718</string>
    <string name="lepay_cashier_cvv2">CVV2 卡背面签名栏后三位</string>
    <string name="lepay_cashier_nextstep">下一步</string>
    <string name="lepay_cashier_toast_choosepaychannel">请先选择支付方式</string>
    <string name="lepay_unbind_submit">提交</string>
    <string name="lepay_unbind_veirify_submit">确认支付</string>
    <string name="lepay_fastpay_pwd_verify_submit">提交</string>
    <string name="lepay_agree_string">我已同意</string>
    <string name="lepay_pay_protocol_string">《乐视支付协议》</string>
    <string name="lepay_common_dialog_reset_password">重置支付密码</string>
    <string name="lepay_common_dialog_close_password">关闭支付密码</string>
    <string name="lepay_common_dialog_cardlist_title">请选用以下银行卡</string>
    <string name="lepay_fastpay_card_manage">我的银行卡管理</string>
    <string name="lepay_fastpay_pwd_set">我的支付密码设置</string>
    <string name="lepay_fastpay_pwd_open">开启移动支付密码</string>
    <string name="lepay_fastpay_pwd_edit">修改支付密码</string>
    <string name="lepay_fastpay_pwd_forget">忘记支付密码</string>
    <string name="lepay_fastpay_pwd_close">关闭支付密码</string>
    <string name="lepay_fastpay_smallpayinfo">小额一键支付</string>
    <string name="lepay_fastpay_smallpay_instructions">验证码成功后，自动绑定此卡，二次消费小于100元金额，一键消费无需验证。</string>
    <string name="lepay_fastpay_pwd_select_card">选定绑定卡</string>
    <string name="lepay_bind_btn_ok">确认绑定</string>
    <string name="lepay_cashier_title_paytype_other_selector">其它支付方式</string>
    <string name="lepay_bind_manage_btn_add">添加银行卡</string>
    <string name="lepay_bind_manage_btn_unbind">解除绑定</string>
    <string name="lepay_bind_card_et_cardNo_hint">3952 4209 4359 3123</string>
    <string name="lepay_bind_card_et_mobile_hint">13156728890</string>
    <string name="lepay_bind_card_et_validity_hint">有效期限 如：09/11</string>
    <string name="lepay_bind_card_et_cvv2_hint">卡背面签名栏数字后三位</string>
    <string name="lepay_bind_verify_et_validity_hint">短信验证码</string>
    <string name="lepay_cardinfo_verify_toast_agree">请先勾选我已同意</string>
    <string name="lepay_cardinfo_verify_toast_inputcardno">信用卡号输入有误，请重新输入</string>
    <string name="lepay_cardinfo_verify_toast_inputmobile">手机号输入有误，请重新输入</string>
    <string name="lepay_cardinfo_verify_toast_inputvalidity">卡有效期有误，请重新输入</string>
    <string name="lepay_cardinfo_verify_toast_inputcvv2">CVV2有误，请重新输入</string>
    <string name="lepay_cardinfo_verify_toast_cardinfo">请完善卡信息</string>
    <string name="lepay_all_currency">￥</string>
    <string name="lepay_toast_selectcard">请选择银行卡</string>
    <string name="lepay_toast_selectonecard">请选择一张银行卡</string>
    <string name="lepay_toast_addsuccess">添加成功</string>
    <string name="lepay_toast_addfail">添加失败</string>
    <string name="lepay_toast_unbindsuccess">解除绑定成功</string>
    <string name="lepay_toast_unbindfail">解除绑定失败</string>
    <string name="lepay_toast_clickbindbtn">点击绑定卡按钮</string>
    <string name="lepay_toast_inputcodeerr">输入的验证码不正确</string>
    <string name="lepay_toast_gaincordfail">验证码获取失败</string>
    <string name="lepay_toast_bindfail">绑定失败！</string>
    <string name="lepay_toast_cardverifyfail">信用卡验证失败</string>
    <string name="lepay_toast_initalipayinterface">支付初始化接口失败</string>
    <string name="lepay_toast_inputfullinfo">请输入完整的信息</string>
    <string name="lepay_toast_setpasswordsuccess">设置密码成功</string>
    <string name="lepay_toast_closepasswordsuccess">关闭密码成功</string>
    <string name="lepay_toast_verifyfail">验证失败</string>
    <string name="lepay_toast_password_verifyfail">密码验证错误</string>
    <string name="lepay_toast_password_closefail">关闭密码失败</string>
    <string name="lepay_toast_password_closesuccess">关闭密码成功</string>
    <string name="lepay_toast_initbanklisterror">初始化银行列表错误</string>
    <string name="lepay_toast_password_setfail">设置密码失败</string>
    <string name="lepay_toast_readbankcarderror">读取列表异常</string>
    <string name="lepay_toast_querysupportbanklistfail">查询支持银行卡列表失败</string>
    <string name="lepay_toast_payprocess">订单信息正在处理中</string>
    <string name="lepay_password_desc">交易金额：</string>
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="lepay_activity_title_cardpay">快捷支付</string>
    <string name="lepay_activity_title_forgetpassword">忘记密码</string>
    <string name="lepay_activity_title_pay">订单支付</string>
    <string name="lepay_activity_title_addbankCare">添加银行卡</string>
    <string name="lepay_activity_title_mybankCare">我的银行卡</string>
    <string name="lepay_activity_btn_submit">提交</string>
    <string name="lepay_activity_btn_next">下一步</string>
    <string name="lepay_activity_btn_okpay">确认支付</string>
    <string name="lepay_activity_btn_okbind">确认绑定</string>
    <string name="lepay_activity_btn_sendagen">重新发送</string>
    <string name="lepay_activity_dialog_title_hint">温馨提示</string>
    <string name="lepay_activity_dialog_title_sccesse">支付成功</string>
    <string name="lepay_activity_dialog_btn_returnlepay">返回收银台</string>
    <string name="lepay_activity_dialog_title_fail">支付失败</string>
    <string name="lepay_activity_dialog_title_passwrodfreeze">"支付密码冻结</string>
    <string name="lepay_activity_dialog_desc_wait">请您30分钟以后尝试</string>
    <string name="lepay_activity_dialog_title_inputpassword">输入支付密码</string>
    <string name="lepay_activity_dialog_title_setpassword">设置新支付密码</string>
    <string name="lepay_activity_dialog_title_setpasswordok">设置支付密码成功</string>
    <string name="lepay_activity_dialog_title_inputpasswordagen">再次新输入支付密码</string>
    <string name="lepay_activity_dialog_title_inputoldpassword">输入原密码</string>
    <string name="lepay_activity_dialog_title_identityok">身份验证识别成功</string>
    <string name="lepay_activity_dialog_desc_thankspay">谢谢您的购买</string>
    <string name="lepay_activity_dialog_desc_nomoney">卡内余额不足，请您以后再完成支付</string>
    <string name="lepay_activity_dialog_desc_diffpassword">两次输入的密码不相同</string>
    <string name="lepay_activity_dialog_desc_nosupport">您的信用卡暂不支持快捷支付</string>
    <string name="lepay_activity_dialog_desc_isunbind">您确定解除绑定吗？</string>
    <string name="lepay_activity_dialog_btn_bindother">绑定其它信用卡</string>
    <string name="lepay_activity_dialog_btn_ok">确定</string>
    <string name="lepay_activity_dialog_btn_cancel">取消</string>
    <string name="lepay_activity_dialog_btn_openpassword">重置支付密码</string>
    <string name="lepay_activity_dialog_btn_closepassword">关闭支付密码</string>
    <string name="lepay_activity_dialog_btn_shop">确定</string>
    <string name="lepay_activity_dialog_btn_return">返回收银台</string>
    <string name="lepay_activity_textview">秒</string>
    <string name="lepay_activity_progressdialog_desc">请稍等&#8230;</string>
    <string name="lepay_activity_minpaydesc">验证码成功后，自动绑定此卡，二次消费小于100元金额，一键消费无需验证。</string>
    <string name="lepay_activity_dialog_btn_wait">继续等待</string>
    <string name="lepay_activity_dialog_btn_payagen">再次支付</string>
    <string name="lepay_activity_dialog_btn_payprocess">支付处理中</string>
    <string name="lepay_activity_dialog_btn_payprocess_desc">支付结果在处理中，请耐心等待</string>
    <string name="lepay_activity_toast_desc_sms_err">验证码错误</string>
    <string name="lepay_activity_paymode_null">支付方式为空</string>
    <string name="lepay_activity_product_desc">描述：</string>
    <string name="lepay_activity_merchant_no">编号：</string>
    <string name="lepay_activity_timestamp">时间：</string>
    <string name="lepay_activity_wxpay_fail">调启微信支付失败，请重试</string>
    <string name="lepay_activity_verify_pay_mode_fail">验证支付方式失败，请重试</string>
    <string name="lepay_activity_nonsupport_paymode">暂不支持该支付方式支付</string>
    <string name="lepay_activity_validation_pay_result">支付结果确认中</string>
    <string name="lepay_activity_pay_fail">支付失败</string>
    <string name="lepay_activity_input_times_max">超过输入验证码错误次数最大值5</string>
    <string name="lepay_activity_pay_processed">支付处理中，请耐心等待</string>
    <string name="lepay_activity_wx_versions_nonsupport">您的微信版本不支持支付，请更新最新版微信</string>
    <string name="lepay_activity_wx_no_install">您没有安装微信，请安装后重试</string>
    <string name="lepay_activity_protocol_title">乐视支付协议</string>
    <string name="lepay_verify_note_msg">已向号码&lt;font color=\"#fd4d4b\"&gt;%1$s&lt;/font&gt;发送短信，请在输入框中填写短信验证码</string>
    <string name="lepay_exception_httpstatus_404">服务器异常</string>
    <string name="lepay_exception_httpstatus_500">服务器异常</string>
    <string name="lepay_exception_httpstatus">服务器异常</string>
    <string name="lepay_exception_iostatus">网络读取异常</string>
    <string name="lepay_exception_nonetwork">无访问网络</string>
    <string name="lepay_exception_json">解析错误</string>
    <string name="lepay_exception_aeserror">加密错误</string>
    <string name="lepay_debit_card">储蓄卡</string>
    <string name="lepay_phone_number">手机号</string>
    <string name="lepay_name">姓&#160;&#160;&#160;&#160;名</string>
    <string name="lepay_your_real_name">您的真实姓名</string>
    <string name="lepay_identification_card_number">您的身份证号</string>
    <string name="lepay_identification_card">身份证</string>
    <string name="lepay_card_verify_fail">银行卡验证失败</string>
    <string name="lepay_debit_card_number_erro_tip">储蓄卡卡号输入有误，请重新输入</string>
    <string name="lepay_please_input_phone_number">请输入手机号</string>
    <string name="lepay_id_card_number_pattern_erro">身份证号码格式不对</string>
    <string name="lepay_id_card_number_no_blank">身份证号码不能为空</string>
    <string name="lepay_please_input_card_number">请输入银行卡号</string>
    <string name="lepay_verify_card_info_fail">银行卡信息校验失败</string>
    <string name="lepay_please_input_all_info">请输入完整信息</string>
    <string name="lepay_leshi_pay">乐视支付</string>
    <string name="lepay_leshi_fastpay">快捷支付</string>
    <string name="lepay_leshi_creditcardpay">信用卡支付</string>
    <string name="lepay_leshi_debitcardpay">储蓄卡支付</string>
    <string name="lepay_pay_reminder">请您在 %1s 内完成支付，以免逾期订单将被取消。</string>
    <string name="lepay_pay_money">实付金额：</string>
    <string name="lepay_pay_money_union">元</string>
    <string name="lepay_ohters_paytype">其他支付方式</string>
    <string name="le_oauth_account_manager_slogan">一个帐号玩转所有乐视服务</string>
    <string name="le_oauth_account_manager_le_logo_description">乐视LOGO</string>
    <string name="le_oauth_account_manager_other_login_arrow_description">其他帐号登录箭头</string>
    <string name="le_oauth_account_manager_other_login">其他帐号登录</string>
    <string name="le_oauth_account_manager_main_title">快速登录</string>
<string name="le_binding_phone_content_description">绑定手机号后,可以在使用乐游币支付时,收到消费短信。为了您的账户安全,建议您绑定手机。
</string>
    <string name="le_binding_phone_phone_hint">手机号</string>
    <string name="title_activity_binding_phone_verify_code">获取验证码</string>
    <string name="title_activity_binding_phone_verify_code_hint">验证码</string>
    <string name="le_sdk_next_content">下一步</string>
    <string name="le_sdk_confirm">确定</string>
    <string name="le_sdk_cancel">取消</string>
    <string name="le_sdk_confirm_title_default">是否确定?</string>
    <string name="le_sdk_show_title_default">成功</string>
    <string name="le_sdk_show_content_default">乐游币:900</string>
    <string name="le_pay_select_info">选择你要充值的金额</string>
    <string name="le_pay_select_unit_rmb">元</string>
    <string name="le_pay_select_unit_rmb_10">10元</string>
    <string name="le_pay_select_unit_rmb_30">30元</string>
    <string name="le_pay_select_unit_rmb_50">50元</string>
    <string name="le_pay_select_unit_rmb_100">100元</string>
    <string name="le_pay_select_unit_rmb_300">300元</string>
    <string name="le_pay_select_unit_rmb_500">500元</string>
    <string name="le_pay_select_value_hint">输入任一整数</string>
    <string name="le_sdk_rmb_to_le_play_coin">1元=1乐游币</string>
</resources>