<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:background="@drawable/le_dialog_border_line_bg" >

        <TextView
            android:id="@+id/le_sdk_show_title"
            style="@style/LeStyleBlack18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/le_sdk_show_title_default" />

        <TextView
            android:id="@+id/le_sdk_show_content"
            style="@style/LeStyleBlack18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/le_sdk_show_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/le_sdk_show_content_default" />

        <Button
            android:id="@+id/le_sdk_show_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/le_solid_button_bg"
            android:text="@string/le_sdk_confirm"
            android:textColor="@color/lepay_white" />
    </RelativeLayout>

</RelativeLayout>