<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/le_oauth_account_manager_le_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/le_oauth_account_manager_le_logo_margin_top"
        android:contentDescription="@string/le_oauth_account_manager_le_logo_description"
        android:src="@drawable/le_oauth_logo_normal" />

    <TextView
        android:id="@+id/le_oauth_account_manager_slogan"
        style="@style/LeOauthAccountManagerSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/le_oauth_account_manager_le_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/le_oauth_account_manager_slogan_margin_top"
        android:text="@string/le_oauth_account_manager_slogan" />

    <RelativeLayout
        android:id="@+id/le_oauth_account_manager_main_view"
        android:layout_width="306dp"
        android:layout_height="@dimen/le_oauth_account_manager_main_view_height"
        android:layout_below="@id/le_oauth_account_manager_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/le_oauth_account_manager_main_view_margin_top"
        android:background="@drawable/le_oauth_account_manager_main_view_background">

        <TextView
            android:id="@+id/account_manager_main_titile_view"
            style="@style/LeOauthAccountManagerMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/le_oauth_account_manager_main_title" />

        <LinearLayout
            android:id="@+id/account_manager_main_user_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/account_manager_main_titile_view"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/le_oauth_account_manager_main_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/le_oauth_account_manager_other_login_margin_top">

        <TextView
            android:id="@+id/le_oauth_account_manager_other_login_txt"
            style="@style/LeOauthAccountManagerOtherLogin"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/le_oauth_account_manager_other_login" />

        <ImageView
            android:id="@+id/le_oauth_account_manager_other_login_arrow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_toRightOf="@id/le_oauth_account_manager_other_login_txt"
            android:contentDescription="@string/le_oauth_account_manager_other_login_arrow_description"
            android:src="@drawable/le_oauth_account_manager_other_login_arrow" />
    </RelativeLayout>

</RelativeLayout>